Fix badge layering in dark mode

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -101,6 +101,7 @@ h1:before, .anchor:before {
     padding-left: 1rem;
     padding-right: 1rem;
     position: absolute;
+    z-index: 10;
     margin-top: .5em;
     margin-left: -.5em;
     color: white;
